<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/Tabs"
        android:layout_margin="@dimen/spacing_default">

        <TextView
            android:id="@+id/txt_today"
            style="@style/Tab"
            android:text="@string/today" />

        <TextView
            android:id="@+id/txt_today_active"
            style="@style/Tab.Active"
            android:text="@string/today"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_this_week"
            style="@style/Tab"
            android:text="@string/this_week" />

        <TextView
            android:id="@+id/txt_this_week_active"
            style="@style/Tab.Active"
            android:text="@string/this_week"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_this_month"
            style="@style/Tab"
            android:text="@string/this_month" />

        <TextView
            android:id="@+id/txt_this_month_active"
            style="@style/Tab.Active"
            android:text="@string/this_month"
            android:visibility="gone" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
