<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/spacing_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_default"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="15sp" />

        <View
            style="@style/Divider.Horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_default"
            android:gravity="center"
            android:textAppearance="?attr/textAppearanceBodySmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_default"
            android:layout_marginTop="@dimen/spacing_default"
            android:layout_marginBottom="@dimen/spacing_small"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                app:strokeColor="?attr/dividerColor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_okay"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_default"
                android:text="@string/yes" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
