<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/lyt_action_bar"
        layout="@layout/action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lyt_action_bar"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_default"
        android:scrollbars="none"
        tools:context=".activities.CreateVisitorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="@string/name"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:suffixText="*"
                app:suffixTextAppearance="?attr/textAppearanceTitleLarge"
                app:suffixTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_default"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="@string/phone"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_default"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="@string/where_from"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:suffixText="*"
                app:suffixTextAppearance="?attr/textAppearanceTitleLarge"
                app:suffixTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_where_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_default"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="@string/where_to"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:suffixText="*"
                app:suffixTextAppearance="?attr/textAppearanceTitleLarge"
                app:suffixTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_where_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_default"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="@string/host"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_default"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="@string/visit_reason"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:suffixText="*"
                app:suffixTextAppearance="?attr/textAppearanceTitleLarge"
                app:suffixTextColor="@color/error">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_visit_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
