<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/spacing_default"
    android:layout_marginBottom="@dimen/spacing_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_default">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_default"
                android:background="@drawable/shape_rounded_rectangle"
                android:backgroundTint="?attr/colorSecondary"
                android:contentDescription="@string/name"
                android:padding="@dimen/spacing_small"
                android:src="@drawable/ic_user"
                app:tint="?attr/colorOnSecondary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/name"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/txt_visit_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/visit_date"
                    android:textAppearance="?attr/textAppearanceListItemSecondary" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_toggle_details"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_caret_down"
                app:iconSize="24dp"
                app:iconTint="?android:attr/textColorHint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_visitor_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_default"
            android:layout_marginBottom="@dimen/spacing_default"
            android:background="@drawable/shape_rounded_rectangle"
            android:backgroundTint="@color/primary_a20"
            android:orientation="vertical"
            android:padding="@dimen/spacing_default"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/where_from"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <TextView
                    android:id="@+id/txt_where_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_default"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/where_from"
                    android:textAppearance="?attr/textAppearanceBodyMedium" />

            </LinearLayout>

            <View style="@style/Divider.Horizontal.Dashed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/where_to"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <TextView
                    android:id="@+id/txt_where_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_default"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/where_to"
                    android:textAppearance="?attr/textAppearanceBodyMedium" />

            </LinearLayout>

            <View style="@style/Divider.Horizontal.Dashed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/host"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <TextView
                    android:id="@+id/txt_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_default"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/host"
                    android:textAppearance="?attr/textAppearanceBodyMedium" />

            </LinearLayout>

            <View style="@style/Divider.Horizontal.Dashed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/visit_reason"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <TextView
                    android:id="@+id/txt_visit_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_default"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/visit_reason"
                    android:textAppearance="?attr/textAppearanceBodyMedium" />

            </LinearLayout>

            <View style="@style/Divider.Horizontal.Dashed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_default"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/phone"
                    android:textAppearance="?attr/textAppearanceBodyMedium" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_default"
                android:text="@string/sign_out" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
